Create canvas template and API connection

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </li>
     </ul>
 </form>
-<div class="map">
-</div>
+<canvas class="map" id="canvas">
+</canvas>
 <ul class="pin-box">
     <li class="pin">
         <img src="img/pin.png" alt="">
